--- a/css/styles.css
+++ b/css/styles.css
@@ -211,7 +211,7 @@ header {
   top: 0;
   left: 0;
   width: 100%;
-  height: 677px;
+  height: 100%;
   background: rgba(46, 47, 66, 0.4);
 
   opacity: 1;
